@@ -1,11 +1,19 @@
 $Id$
 	
+<<<<<<< CHANGELOG
+
+2004-10-01: Define 'ytools-logical-pathname-def' to make it easy to
+            find the definition of a YTools logical pathname. (Version 1.4.7)
+
 2004-09-29: Added convenience function (in-ytools), which sets
             *package* and *readtable* to their proper YTools
             values. (Version 1.4.6)
 
 2004-09-26: Patch 'subr-synonym' to cope with bug in OpenMCL.
             (Version 1.4.5)
+
+2004-09-19: Define 'is-list' in base.lisp as synonym for 'listp'.
+            Minor change to 'datafun-table' in datafun.lisp.
 
 2004-09-16: Added field :initbind e to (x :in l) clause of
             'repeat'. The expression e is evaluated and bound to x
